# animation-tree

./: Cargo.toml  README.md
examples/: animated_custom.rs  animated_sprite.rs  animated_spritesheet.rs  animated_transform.rs
src/: implemented.rs  lerp.rs  lib.rs
