[package]
name = "animation-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "animated_transform"
path = "examples/animated_transform.rs"

[dependencies]
bevy = { version = "0.7", default-features = false }

[dev-dependencies]
bevy = { version = "0.7", features = [] }