[package]
name = "keyframe-animate"
version = "0.1.1"
edition = "2021"
description = "A keyframe animtaion library for bevyengine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bxcxygg/keyframe-animate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["render", "sprite", "ui"]
render = ["bevy/bevy_render"]
sprite = ["bevy/bevy_sprite"]
ui = ["bevy/bevy_ui"]
examples = ["ui", "sprite", "render", "bevy/render", "bevy/bevy_winit", "bevy/x11"]

[[example]]
name = "animated_transform"
path = "examples/animated_transform.rs"
required-features = [ "examples" ]

[[example]]
name = "animated_sprite"
path = "examples/animated_sprite.rs"
required-features = [ "examples" ]

[[example]]
name = "animated_spritesheet"
path = "examples/animated_spritesheet.rs"
required-features = [ "examples" ]

[[example]]
name = "animated_custom"
path = "examples/animated_custom.rs"
required-features = [ "examples" ]

[dependencies]
bevy = { version = "0.7", default-features = false }

[dev-dependencies]
bevy = "0.7"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
interpolation = "0.2"
